[package]
name = "runestone"
version = "0.0.0"
edition = "2021"
description = "Runes"
license = "CC0-1.0"
autotests = false

[dependencies]
bitcoin = "0.30.1"
clap = { version = "4.4.5", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

[dev-dependencies]
executable-path = "1.0.0"

[[test]]
name = "integration"
path = "tests/lib.rs"
