[package]
name = "runestone"
version = "0.0.0"
edition = "2021"
description = "Runes"
license = "CC0-1.0"
autotests = false

[dependencies]
anyhow = "1.0.75"
axum = "0.6.1"
axum-server = "0.5.0"
bitcoin = "0.30.1"
clap = { version = "4.4.5", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }

[dev-dependencies]
executable-path = "1.0.0"
reqwest = { version = "0.11.20", features = ["blocking"] }

[[test]]
name = "integration"
path = "tests/lib.rs"
